refactor: front completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="grid grid-cols-[auto,1fr]">
   
-  <div class="w-60 p-8 bg-slate-500 h-full min-h-[100vh]">
+  <div class="w-60 bg-slate-500 h-full min-h-[100vh]">
     <app-sidebar></app-sidebar>
   </div>
   
