--- a/src/app/country/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/country/pages/by-capital-page/by-capital-page.component.html
@@ -1,8 +1,12 @@
 <app-searchbox
   [placeHolder]="'Buscar por capital'"
-  (eventSearch)="search($event)"
+  (eventSearch)="searchByCapital($event)"
+  (onDebounce)="searchByCapital($event)"
 ></app-searchbox>
 
+@if (isLoading) {
+  <app-loading-spinner></app-loading-spinner>
+}
 <div class="flex flex-col">
   <div class="overflow-x-auto sm:-mx-6 lg:-mx-8">
     <div class="inline-block min-w-full py-2 sm:px-6 lg:px-8">
@@ -28,7 +32,7 @@
                     <img [src]="country.flags.svg" [alt]="country.name" class="w-7">
                   </td>
                   <td class="px-6 py-1">{{ country.population | number }}</td>
-                  <td class="px-6 py-1"><a routerLink="/by/:id" class="text-blue-800 underline">Ver más</a></td>
+                  <td class="px-6 py-1"><a [routerLink]="[ '/countries/by', country.cca3]" class="text-blue-800 underline">Ver más</a></td>
                 </tr>
               }
             }
