--- a/src/app/country/pages/by-country-page/by-country-page.component.html
+++ b/src/app/country/pages/by-country-page/by-country-page.component.html
@@ -1,8 +1,11 @@
 <app-searchbox
   [placeHolder]="'Buscar por país'"
-  (eventSearch)="search($event)"
+  (eventSearch)="searchByCountry($event)"
+  (onDebounce)="searchByCountry($event)"
 ></app-searchbox>
-
+@if (isLoading) {
+  <app-loading-spinner></app-loading-spinner>
+}
 <div class="flex flex-col">
   <div class="overflow-x-auto sm:-mx-6 lg:-mx-8">
     <div class="inline-block min-w-full py-2 sm:px-6 lg:px-8">
@@ -32,7 +35,7 @@
                     />
                   </td>
                   <td class="px-6 py-1">{{ country.population | number }}</td>
-                  <td class="px-6 py-1"><a href="" class="text-blue-800 underline">Ver más</a></td>
+                  <td class="px-6 py-1"><a [routerLink]="[ '/countries/by', country.cca3]" class="text-blue-800 underline">Ver más</a></td>
                 </tr>
               }
             }
